--- a/style.css
+++ b/style.css
@@ -2,5 +2,89 @@ body{
     color: white;
     background-image: url(./images/bg-intro-desktop.png);
     background-color: #ec7476;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Poppins", sans-serif;
 }
+
+input{
+    all:inset
+}
+
+
+h1{
+    font-size: 3rem;
+}
+
+.container{
+    display: grid;
+    grid-template-columns: 45% 45%;
+    justify-content: space-between;
+    padding:10rem 20rem;
+}
+
+.page-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.cta{
+    padding: 0.5rem 3rem;
+    background-color: hsl(248,32%,49%);
+    text-align: center;
+   /* box-shadow: 0 0.5rem rgba(0, 0, 0, 0.1);*/
+    margin: 2rem;
+}
+
+.round-corners{
+    border-radius: 1rem;
+}
+
+.container_shadow{
+    box-shadow: 0 0.5rem rgba(0, 0, 0, 0.1);
+}
+
+
+.form{
+    background-color: white;
+    padding: 2rem;
+}
+
+form{
+    display:flex;
+    flex-direction: column;
+}
+
+form > input{
+    padding:1rem;
+    margin-bottom: 1rem;
+    border: 1px solid lightgray;
+    border-radius: 0.1rem;
+    font-weight: 700;
+}
+
+form > input:focus{
+    border: 1px solid black;
+}
+
+form > input:last-child{
+    background-color: hsl(154,59%,51%);
+    text-align: center;
+    box-shadow: inset 0 -0.1rem rgba(0, 0, 0, 0.1);
+}
+
+.terms{
+    color:lightgray;
+    font-size: 0.75rem;
+    text-align: center;
+}
+
+.terms > strong{
+    color: hsl(0,100%,74%);
+}
+
+.page_text > p {
+    font-size: 1.25rem;
+    line-height: 1.5;
+    margin-top: 0;
+}
+    
